debugged edit view - fixed name field only prefilling with first name, and removed injection vulnerability

--- a/views/members/edit.erb
+++ b/views/members/edit.erb
@@ -1,6 +1,6 @@
 <form action="/members/<%=@member.id()%>" method="post">
   <label for="name">Full Name:</label>
-  <input type="text" name="name" value=<%=@member.name%>>
+  <input type="text" name="name" value="<%=@member.name%>">
 
   <label for="premium">Membership status:</label>
   <select name="premium">
